--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,17 +1,29 @@
 .header {
     margin-left: 250px;
-    background-color: #F7E1D7;
+    background-color: #E5D0CC;
 }
 
-nav li {
+nav a {
+    text-decoration: none;
     display: inline-block;
-    padding-left: 8px;
+    padding-left: 6px;
 }
 
-nav li::after {
+nav a::after {
     content: " |";
+    color: #BFACB5;
 }
 
-nav li:last-child::after {
+nav a:last-child::after {
     content: none;
 }
+
+.nav-link.active {
+    color: #444554;
+  }
+
+
+  ul {
+    margin: 0;
+    padding: 10px;
+  }
