--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -1,5 +1,5 @@
 .sidebar {
-    background-color: #EDAFB8;
+    background-color: #7F7B82;
         margin-left: 50px;
         width: 200px;
         height: 100%;
