--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,17 +1,27 @@
 .header {
-    margin-left: 250px;
     background-color: #E5D0CC;
+    height: 250px;
+    display: flex;
+    justify-content: space-between;
+}
+
+
+
+nav {
+    display: flex;
+    height: 100%;
+    align-items: center;
 }
 
 nav a {
     text-decoration: none;
-    display: inline-block;
+    /* display: inline-block; */
     padding-left: 6px;
 }
 
 nav a::after {
     content: " |";
-    color: #BFACB5;
+    color: #e6e1e4;
 }
 
 nav a:last-child::after {
@@ -19,11 +29,56 @@ nav a:last-child::after {
 }
 
 .nav-link.active {
-    color: #444554;
+    color: #514f4f;
   }
-
 
   ul {
+    padding: 0;
     margin: 0;
-    padding: 10px;
   }
+
+  /* .logo-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px; 
+} */
+
+.logo {
+    position: absolute;
+    max-width: 100%;
+    height: auto;
+} 
+
+.header-section {
+    position: relative;
+    display: flex;
+    /* align-items: center; */
+    /* justify-content: space-between; */
+    padding: 0 20px;
+}
+
+.header-section-large {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    width: 70%;
+    justify-content: center;
+    min-width: fit-content;
+}
+
+.header-section-small {
+    border-left: 2px solid #e6e1e4;
+    width: 30%;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    min-width: fit-content;
+}
+h1 {
+    color: #514f4f;
+}
+h2 {
+    color: #7f7b82;
+}
+
+
